# research-workshop

./: README.md  main.py  participants.md  pyproject.toml
docker/: Dockerfile  Makefile  main.cpp  sample.txt
docs/: index.html
docs/assets/: Bibtex.txt
mypackage/: __init__.py  model.py
