[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mypackage"]

[project]
name = "research-workshop-1"  # this should be unique
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.10.1",
    "torch>=2.11.0",
    "transformers>=5.5.4",
    "numpy>=1.24,<2.0",
]

[project.scripts]
sentiment = "mypackage.model:cli"
